@@ -121,6 +121,7 @@ debbugs (2.4.2) UNRELEASED; urgency=low
     - Obey package for usertags (closes: #376528)
     - Add link to subscribe to a bug (closes: #353260)
     - Don't lc owner or forwarded at submit time (closes: #288384)
+    - Explain how to close bugs in the ack message (closes: #37605)
 
   
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
